--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section>
             <div id="title">
                 <h1>janbujanowski.github.io</h1>
-                <p>Home portoflio</p>
+                <p>Czesio nie ma wacka</p>
                 <hr>
                 <span class="credits left">Project maintained by
                     <a href="https://github.com/janbujanowski">janbujanowski</a>
