basic angular 1 setup

--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
             <li class="fork">
                 <a href="https://github.com/janbujanowski/janbujanowski.github.io">View On GitHub</a>
             </li>
-
         </nav>
     </div>
+
     <!-- end header -->
 
     <div class="wrapper">
 
         <section>
+            <div id="header-folio">
+                <h1>Dear reader!</h1>
+                <h2>Please allow me to introduce myself, I'm a man of wealth and taste</h2>
+                <h2>Below you can find details of my experience. And my photo as well</h2>
+                <img src="https://avatars0.githubusercontent.com/u/13711787?s=460&v=4" />
+            </div>
             <div id="title">
                 <h1>janbujanowski.github.io</h1>
                 <p>Czesio nie ma wacka</p>
@@ -59,10 +65,10 @@
                 </span>
             </div>
 
-            <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
+            <h2 id="welcome-to-github-pages">Featured project</h2>
 
-            <p>You can use the
-                <a href="https://github.com/janbujanowski/janbujanowski.github.io/edit/master/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
+            <p>For some basic Angular 1.9 fun
+                <a href="angular1.html"> check this page</a></p>
 
             <p>Whenever you commit to this repository, GitHub Pages will run
                 <a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.</p>
@@ -109,4 +115,5 @@
         </section>
     </div>
 </body>
+
 </html>
