--- a/sha256.html
+++ b/sha256.html
@@ -54,7 +54,7 @@
             <div ng-controller="sha256Controller as sha256">
                 <form ng-submit="sha256.codeMessage()">
                     <input type="text" ng-model="sha256.rawMessage" size="30" placeholder="Message to code">
-                    <input class="btn-primary" type="submit" value="Hash integrity">
+                    <input class="btn-primary" type="submit" value="Hash it">
                 </form>
                 <h2>Hash Value</h2>
                 {{sha256.codedMessage}}
