--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="header">
         <nav>
             <li class="fork">
-                <a href="https://github.com/janbujanowski/janbujanowski.github.io">View On GitHub</a>
+                <a href="https://github.com/janbujanowski">View On GitHub</a>
             </li>
         </nav>
     </div>
